Poniendo links de los emotes a pagina baulo

--- a/bautiAudios.html
+++ b/bautiAudios.html
@@ -211,59 +211,59 @@
         document.addEventListener('DOMContentLoaded', () => {
             const numEmotes = 200;
             const emoteSources = [
-                './images/7tv/CAUGHT.png', 
-                './images/7tv/51.gif', 
-                './images/7tv/omegalul.gif', 
-                './images/7tv/RUNN.gif',
-                './images/7tv/34.gif',
-                './images/7tv/44.gif',
-                './images/7tv/51.gif',
-                './images/7tv/BASEDCIGAR.gif',
-                './images/7tv/bautiCumers.gif',
-                './images/7tv/blabbering.gif',
-                './images/7tv/boner.gif',
-                './images/7tv/catJam.gif',
-                './images/7tv/classic.gif',
-                './images/7tv/eh.gif',
-                './images/7tv/ESKIZO.gif',
-                './images/7tv/happi.gif',
-                './images/7tv/JIJO.gif',
-                './images/7tv/KickTime.gif',
-                './images/7tv/muga.gif',
-                './images/7tv/nowaying.gif',
-                './images/7tv/QUEDICE.gif',
-                './images/7tv/sigma.gif',
-                './images/7tv/sigmaArrive.gif',
-                './images/7tv/WHISTLING.gif',
-                './images/7tv/yump.gif',
-                './images/7tv/zidane.gif',
-                './images/7tv/agusbob.png',
-                './images/7tv/ahmm.png',
-                './images/7tv/aldu.png',
-                './images/7tv/bana.png',
-                './images/7tv/bauti.png',
-                './images/7tv/coscu.png',
-                './images/7tv/davo.png',
-                './images/7tv/flor.png',
-                './images/7tv/franquito.png',
-                './images/7tv/Gayge.png',
-                './images/7tv/hornet.png',
-                './images/7tv/HUH.png',
-                './images/7tv/isma.png',
-                './images/7tv/JE.png',
-                './images/7tv/lolo.png',
-                './images/7tv/MAJ.png',
-                './images/7tv/mirko.png',
-                './images/7tv/momo.png',
-                './images/7tv/morte.png',
-                './images/7tv/ok.png',
-                './images/7tv/rc.png',
-                './images/7tv/SAJ.png',
-                './images/7tv/spreen.png',
-                './images/7tv/sus.png',
-                './images/7tv/wideDude.png',
-                './images/7tv/yutanita.png',
-                './images/7tv/yutabt.png' // Aquí puedes agregar más GIFs separados por comas si lo deseas
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/CAUGHT.png?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/51.gif?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/omegalul.gif?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/RUNN.gif?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/34.gif?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/44.gif?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/51.gif?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/BASEDCIGAR.gif?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/bautiCumers.gif?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/blabbering.gif?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/boner.gif?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/catJam.gif?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/classic.gif?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/eh.gif?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/ESKIZO.gif?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/happi.gif?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/JIJO.gif?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/KickTime.gif?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/muga.gif?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/nowaying.gif?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/QUEDICE.gif?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/sigma.gif?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/sigmaArrive.gif?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/WHISTLING.gif?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/yump.gif?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/zidane.gif?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/agusbob.png?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/ahmm.png?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/aldu.png?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/bana.png?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/bauti.png?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/coscu.png?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/davo.png?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/flor.png?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/franquito.png?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/Gayge.png?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/hornet.png?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/HUH.png?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/isma.png?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/JE.png?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/lolo.png?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/MAJ.png?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/mirko.png?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/momo.png?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/morte.png?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/ok.png?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/rc.png?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/SAJ.png?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/spreen.png?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/sus.png?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/wideDude.png?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/yutanita.png?raw=true',
+                'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/7tv/yutabt.png?raw=true' // Aquí puedes agregar más GIFs separados por comas si lo deseas
             ];
 
             for (let i = 0; i < numEmotes; i++) {
