--- a/escucharAudios.html
+++ b/escucharAudios.html
@@ -458,7 +458,7 @@
                 </audio>
             </div>
 
-            <div class="user-card color4">
+            <div class="user-card color3">
                 <h3>ANONIMO</h3>
                 <audio controls>
                     <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/2024-06-20 17-28-08.mp3" type="audio/mpeg">
@@ -473,9 +473,25 @@
                     Tu navegador no admite el elemento de audio.
                 </audio>
             </div>
+
+            <div class="user-card color4">
+                <h3>Slynack</h3>
+                <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/slynack_1719002849219.wav" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+            </div>
+
+            <div class="user-card color1">
+                <h3>Slynack Audio 2</h3>
+                <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/slynack2_1719003186087.wav" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+            </div>
             <!--
             <div class="user-card color2">
-                <h3>MILA</h3>
+                <h3>ANONIMO</h3>
                 <audio controls>
                     <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/audio2.ogg" type="audio/mpeg">
                     Tu navegador no admite el elemento de audio.
