--- a/escucharAudios.html
+++ b/escucharAudios.html
@@ -418,6 +418,11 @@
                 </audio>
             </div>
 
+            <div class="user-card color2">
+                <h3>The Daviel</h3>
+                <button onclick="showImages(['https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/The_Daviel_1718831815372_inbound5976959344037160160.png?raw=true'])">FOTOS</button>
+            </div>
+
             <div class="user-card color3">
                 <h3>ANONIMO</h3>
                 <audio controls>
@@ -448,6 +453,15 @@
                     <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/2024-06-20 17-31-39.mp3" type="audio/mpeg">
                     Tu navegador no admite el elemento de audio.
                 </audio>
+            </div>
+
+            <div class="user-card color2">
+                <h3>JulianPz7</h3>
+                <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/JulianPZ7_1719177105101.wav" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+                <button onclick="showImages(['https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/JulianPZ7_1719177193975_Captura de pantalla 2024-03-20 014111.png?raw=true'])">FOTOS</button>
             </div>
 
             <div class="user-card color3">
@@ -488,17 +502,8 @@
                     <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/slynack2_1719003186087.wav" type="audio/mpeg">
                     Tu navegador no admite el elemento de audio.
                 </audio>
-            </div>
-            <!--
-            <div class="user-card color2">
-                <h3>ANONIMO</h3>
-                <audio controls>
-                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/audio2.ogg" type="audio/mpeg">
-                    Tu navegador no admite el elemento de audio.
-                </audio>
-                <button onclick="showImages(['https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/5.jpeg?raw=true', 'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/1.jpg?raw=true'])">FOTOS</button>
-            </div>
-            -->
+            </div>            
+            
         </div>
     </div>
 
