actualizando pagina aldu

--- a/audiosAldu/index.html
+++ b/audiosAldu/index.html
@@ -19,18 +19,17 @@
     </style>
 </head>
 <body>
-    <div>
-        <h2>Situación Sentimental</h2>
+    <div id="infoMain">
+        <div>
+            <h2>Situación Sentimental</h2>
+        </div>
+        <div>
+            <h2>Actualmente</h2>
+        </div>
+        <div>
+            <h4>El botón "ELEGIR IMAGEN" sirve para adjuntar imágenes relacionadas a la historia.</h4>
+        </div>
     </div>
-    
-    <div>
-        <h3>Actualmente</h3>
-    </div>
-
-    <div>
-        <h4>El botón "ELEGIR IMAGEN" sirve para adjuntar imágenes relacionadas a la historia.</h4>
-    </div>
-
     <form id="uploadForm">
         <input type="text" id="username" placeholder="Username" required>
         <button type="button" onclick="startRecording()">Comenzar a Grabar</button>
