actualizando pagina aldu

--- a/audiosAldu/index.html
+++ b/audiosAldu/index.html
@@ -21,13 +21,10 @@
 <body>
     <div id="infoMain">
         <div>
-            <h2>Situación Sentimental</h2>
+            <h2>Aldi Resuelve</h2>
         </div>
         <div>
-            <h2>Actualmente</h2>
-        </div>
-        <div>
-            <h4>El botón "ELEGIR IMAGEN" sirve para adjuntar imágenes relacionadas a la historia.</h4>
+            <h3>Manda un audio contando algun problema amoroso que tengas actualmente</h3>
         </div>
     </div>
     <form id="uploadForm">
@@ -46,6 +43,9 @@
         </div>
     </div>
     <div id="anonymInstructions">
+        <div>
+            <h4>El botón "ELEGIR IMAGEN" sirve para adjuntar imágenes relacionadas a la historia.</h4>
+        </div>
         <div>
             <h4>Si querés mandar un audio ANÓNIMO, insertá de usuario "ANONIMO".</h4>
         </div>
