--- a/audiosAldu/index.html
+++ b/audiosAldu/index.html
@@ -27,10 +27,12 @@
             <h3>Manda un audio contando algun problema amoroso que tengas actualmente</h3>
         </div>
     </div>
+    
     <form id="uploadForm">
         <input type="text" id="username" placeholder="Username" required>
         <button type="button" onclick="startRecording()">Comenzar a Grabar</button>
         <button type="button" id="chooseImageButton" onclick="showImageUpload()">Elegir Imagen</button>
+        <button type="button" id="writeStoryButton" onclick="showTextInput()">Escribir Historia</button>
     </form>
 
     <div id="controls" style="display: none;">
@@ -42,6 +44,11 @@
             <button id="confirmButton" style="display: none;" onclick="this.disabled = true; confirmAndUploadAudio()">Confirmar Audio y Enviar</button>
         </div>
     </div>
+
+    <div id="rememberAlert">
+        <h4>Acordate de poner el Username antes de enviar el audio/imagen/texto</h4>
+    </div>
+
     <div id="anonymInstructions">
         <div>
             <h4>El botón "ELEGIR IMAGEN" sirve para adjuntar imágenes relacionadas a la historia.</h4>
@@ -49,11 +56,9 @@
         <div>
             <h4>Si querés mandar un audio ANÓNIMO, insertá de usuario "ANONIMO".</h4>
         </div>
-
         <div>
             <h5>Tené en cuenta que si es ANÓNIMO y mandás más de 1 audio, tenés que poner alguna palabra clave.</h5>
         </div>
-
         <div>
             <h5>Poné "ANONIMO" + "PALABRA CLAVE" + "NÚMERO DE AUDIO" que haga referencia a tu audio.</h5>
         </div>
@@ -63,6 +68,12 @@
         <input type="file" id="imageInput" accept="image/*">
         <button type="button" onclick="this.disabled = true; confirmAndUploadImage()">Confirmar y Enviar Imagen</button>
     </div>
+
+    <div id="textInputForm" style="display: none;">
+        <textarea id="textInput" rows="10" cols="30" placeholder="Escribe tu historia aquí..."></textarea>
+        <button type="button" onclick="this.disabled = true; uploadText()">Enviar</button>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
