actualizando paginas mari

--- a/escucharAudios.html
+++ b/escucharAudios.html
@@ -364,7 +364,7 @@
             <div class="user-card color4">
                 <h3>Gerardo Matraca Audio 3</h3>
                 <audio controls>
-                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/Pugliaa_1720376442974.wav" type="audio/mpeg">
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/Gerardo Matraca 3_1720454971115.wav" type="audio/mpeg">
                     Tu navegador no admite el elemento de audio.
                 </audio>
             </div>
